[tool.poetry]
name = "metrics"
version = "0.1.0"
description = "Metrics from various sources"
authors = ["Jorge Calavia <1184336+jcalavia@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
cleo = "^0.8.1"
python = "^3.8"
PyDriller = "^2.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7.1"
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pylint = "^2.12.2"
pytest-cov = "^3.0.0"
pytest = "^6.2.5"
pytest-mock = "^3.6.1"
tox = "^3.24.5"

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["metrics", "tests"]
filter_files = true
known_first_party = "metrics"

[tool.poetry.scripts]
metrics = "metrics.cli:application.run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
